[Router, Navigation] Added appbar and navigation drawer with working links to pages

--- a/tpe_paw_front/src/locales/en.json
+++ b/tpe_paw_front/src/locales/en.json
@@ -1,3 +1,9 @@
 {
-  "message": "hello i18n !!"
+  "message": "hello i18n !!",
+  "explore": {
+    "title": "Explore"
+  },
+  "languages": {
+    "title": "Languages"
+  }
 }
