[Navigation, Bug Fix] Fix for navbar not behaving properly when resizing

--- a/tpe_paw_front/src/locales/en.json
+++ b/tpe_paw_front/src/locales/en.json
@@ -5,5 +5,16 @@
   },
   "languages": {
     "title": "Languages"
+  },
+  "snippets": { 
+    "feed": {
+      "title": "Snippets Feed",
+      "favorites": {
+        "title": "Favorites"
+      },
+      "following": {
+        "title": "Following"
+      }
+    }
   }
 }
