--- a/tpe_paw_front/src/locales/en.json
+++ b/tpe_paw_front/src/locales/en.json
@@ -1,10 +1,16 @@
 {
   "message": "hello i18n !!",
+  "feed": {
+    "title": "Feed"
+  },
   "explore": {
     "title": "Explore"
   },
   "languages": {
     "title": "Languages"
+  },
+  "tags": {
+    "title": "Tags"
   },
   "snippets": { 
     "feed": {
