[Login] Minimal Login view, /login now returning token and expiration date in body instead of auth header

--- a/tpe_paw_front/src/locales/en.json
+++ b/tpe_paw_front/src/locales/en.json
@@ -22,5 +22,13 @@
         "title": "Following"
       }
     }
+  },
+  "registration": {
+    "login": {
+      "login": "Log In",
+      "username": "User Name",
+      "password": "Password",
+      "usernameOrPasswordInvalid": "User Name Or Password Invalid"
+    }
   }
 }
