--- a/tpe_paw/webapp/src/main/resources/i18n/messages.properties
+++ b/tpe_paw/webapp/src/main/resources/i18n/messages.properties
@@ -118,6 +118,7 @@ NotBlank.reportForm.reportDetail=You must specify a message when reporting snipp
 form.error.password=The password cannot contain spaces
 form.error.spaces=Please remove all leading or trailing white spaces
 
+error.400.linkNoLongerValid=Password recovery link no longer valid.
 error.403=Unauthorized access! Must be logged in to be inside \"{0}\"
 error.403.admin.delete=Unauthorized access! Only admins can delete languages or tags.
 error.403.admin.snippet.create=As an admin, you can not create snippets.
