[Login] All verification endpoints now working

--- a/tpe_paw/webapp/src/main/resources/i18n/messages_es.properties
+++ b/tpe_paw/webapp/src/main/resources/i18n/messages_es.properties
@@ -119,6 +119,7 @@ form.error.password=La contraseña no puede contener espacios vacios
 form.error.spaces=Porfavor remueva los espacios en blanco al inicio y al final
 
 error.400.linkNoLongerValid=Link de recuperación de contraseña inválido.
+error.400.invalidVerificationCode=Invalid verification code.
 error.403=¡Acceso no autorizado! Debes iniciar sesión para entrar a \"{0}\"
 error.403.admin.delete=¡Acceso no autorizado! Solo los administradores pueden borrar lenguajes o etiquetas
 error.403.admin.snippet.create=Como un administrador, no puedes crear snippets
