--- a/tpe_paw/webapp/src/main/resources/i18n/messages.properties
+++ b/tpe_paw/webapp/src/main/resources/i18n/messages.properties
@@ -119,6 +119,7 @@ form.error.password=The password cannot contain spaces
 form.error.spaces=Please remove all leading or trailing white spaces
 
 error.400.linkNoLongerValid=Password recovery link no longer valid.
+error.400.invalidVerificationCode=Invalid verification code.
 error.403=Unauthorized access! Must be logged in to be inside \"{0}\"
 error.403.admin.delete=Unauthorized access! Only admins can delete languages or tags.
 error.403.admin.snippet.create=As an admin, you can not create snippets.
