[Tags] Search functionality, follow, and general corrections in endpoint

--- a/tpe_paw_front/src/locales/en.json
+++ b/tpe_paw_front/src/locales/en.json
@@ -10,7 +10,12 @@
     "title": "Languages"
   },
   "tags": {
-    "title": "Tags"
+    "title": "Tags",
+    "follow": "Follow",
+    "following": "Following",
+    "search" : "Search for a tag",
+    "showEmpty": "Show empty",
+    "showOnlyFollowing": "Show following"
   },
   "snippets": { 
     "feed": {
