[TagSelect] Cleanup and testing with more pages

--- a/tpe_paw_front/src/locales/en.json
+++ b/tpe_paw_front/src/locales/en.json
@@ -102,6 +102,9 @@
   "components": {
     "tfDatePicker": {
       "defaultLabel": "Select Date"
+    },
+    "tagSelect": {
+      "loadMore": "Load More"
     }
   }
 }
