[Explore] Better styling for multiselect, corrected language search endpoint - exploring with dates still throwing 404

--- a/tpe_paw_front/src/locales/en.json
+++ b/tpe_paw_front/src/locales/en.json
@@ -103,8 +103,16 @@
     "tfDatePicker": {
       "defaultLabel": "Select Date"
     },
+    "shared": {
+      "pagination": {
+        "loadMore": "Load More"
+      }
+    },
     "tagSelect": {
-      "loadMore": "Load More"
+      "selectTag": "Select A Tag"
+    },
+    "languageSelect": {
+      "selectLanguage": "Select A Language"
     }
   }
 }
