More snippet endpoints, modularize

--- a/tpe_paw/webapp/src/main/resources/i18n/messages_en.properties
+++ b/tpe_paw/webapp/src/main/resources/i18n/messages_en.properties
@@ -152,6 +152,7 @@ error.414.name=Uri Too Long
 error.414.search=Your search query was too long. Why not try something shorter?
 error.500=We're Sorry! There was an error on our side
 error.500.name=Internal Server Error
+error.500.snippet.report.failure="Failure while reporting the snippet."
 error.home=Why not look for something else or go back to the Home page?
 error.unknown.name=Unknown Error
 error.unknown=We are sorry, we do not know what went wrong
