[Search] Added changing URL when a search is made to match query; UI enhancements

--- a/tpe_paw_front/src/locales/en.json
+++ b/tpe_paw_front/src/locales/en.json
@@ -58,6 +58,8 @@
     }
   },
   "search": {
+    "selectType": "Select Type",
+    "selectOrder": "Select Sorting Order",
     "type": {
       "all": "All",
       "tag": "Tag",
