--- a/tpe_paw_front/src/locales/en.json
+++ b/tpe_paw_front/src/locales/en.json
@@ -58,8 +58,8 @@
     }
   },
   "search": {
-    "selectType": "Select Type",
-    "selectOrder": "Select Sorting Order",
+    "selectType": "Type",
+    "selectOrder": "Order",
     "type": {
       "all": "All",
       "tag": "Tag",
