--- a/tpe_paw_front/src/locales/en.json
+++ b/tpe_paw_front/src/locales/en.json
@@ -58,6 +58,8 @@
     }
   },
   "search": {
+    "showOnlyFollowing": "Show Only Following",
+    "showEmpty": "Show empty",
     "selectType": "Type",
     "selectOrder": "Order",
     "type": {
@@ -77,6 +79,8 @@
   "registration": {
     "username": "User Name",
     "password": "Password",
+    "profile": "Profile",
+    "logout": "Log Out",
     "login": "Log In",
     "email": "Email",
     "repeatPassword": "Repeat Password",
