--- a/tpe_paw/webapp/src/main/resources/i18n/messages_es.properties
+++ b/tpe_paw/webapp/src/main/resources/i18n/messages_es.properties
@@ -118,6 +118,7 @@ NotBlank.reportForm.reportDetail=Debes especificar un mensaje al reportar snippe
 form.error.password=La contraseña no puede contener espacios vacios
 form.error.spaces=Porfavor remueva los espacios en blanco al inicio y al final
 
+error.400.dateFormat=Formato de fecha incorrecto: debe ser yyyy-MM-dd
 error.400.linkNoLongerValid=Link de recuperación de contraseña inválido.
 error.400.invalidVerificationCode=Invalid verification code.
 error.403=¡Acceso no autorizado! Debes iniciar sesión para entrar a \"{0}\"
