[tfDatePicker] Added buttons for clearing date in tfDatePicker

--- a/tpe_paw_front/src/locales/en.json
+++ b/tpe_paw_front/src/locales/en.json
@@ -108,7 +108,8 @@
   },
   "components": {
     "tfDatePicker": {
-      "defaultLabel": "Select Date"
+      "defaultLabel": "Select Date",
+      "clearDate": "Clear Date"
     },
     "shared": {
       "pagination": {
