[Navigation] Added Create Snippet view + navigation

--- a/tpe_paw_front/src/locales/en.json
+++ b/tpe_paw_front/src/locales/en.json
@@ -47,7 +47,8 @@
     "showEmpty": "Show empty",
     "showOnlyFollowing": "Show following"
   },
-  "snippets": { 
+  "snippets": {
+    "createSnippet": "Create Snippet",
     "feed": {
       "title": "Snippets Feed",
       "favorites": {
