[Profile Photo] Safety commit before adding new dependencies

--- a/tpe_paw/webapp/src/main/resources/i18n/messages_es.properties
+++ b/tpe_paw/webapp/src/main/resources/i18n/messages_es.properties
@@ -154,6 +154,7 @@ error.414.search=Parece que quieres buscar algo demasiado largo. Por qué no pru
 error.500=¡Perdón! Parece que hubo un error de nuestro lado
 error.500.name=Error Interno
 error.500.snippet.report.failure="Fallo al reportar el snippet."
+error.500.io.image=Error procesando la imagen
 error.home=¿Por qué no buscas otra cosa o vuelves al Inicio?
 error.unknown.name=Error Desconocido
 error.unknown=Perdón, no sabemos que ocurrió mal
