--- a/tpe_paw/webapp/src/main/resources/i18n/messages.properties
+++ b/tpe_paw/webapp/src/main/resources/i18n/messages.properties
@@ -153,6 +153,7 @@ error.414.search=Your search query was too long. Why not try something shorter?
 error.500=We're Sorry! There was an error on our side
 error.500.name=Internal Server Error
 error.500.snippet.report.failure="Failure while reporting the snippet."
+error.500.io.image=Error parsing image
 error.home=Why not look for something else or go back to the Home page?
 error.unknown.name=Unknown Error
 error.unknown=We are sorry, we do not know what went wrong
