[User Profile] Displaying & modifying user data starters

--- a/tpe_paw_front/src/locales/en.json
+++ b/tpe_paw_front/src/locales/en.json
@@ -85,6 +85,13 @@
       "no": "No specific order"
     }
   },
+  "user": {
+    "profile": {
+      "editProfile": "Edit Profile",
+      "cancel": "Cancel",
+      "done": "Done"
+    }
+  },
   "registration": {
     "username": "User Name",
     "password": "Password",
