[User Profile] Now user can see active and deleted snippets

--- a/tpe_paw_front/src/locales/en.json
+++ b/tpe_paw_front/src/locales/en.json
@@ -90,7 +90,9 @@
       "editProfile": "Edit Profile",
       "cancel": "Cancel",
       "done": "Done"
-    }
+    },
+    "active": "Active Snippets",
+    "deleted": "Deleted Snippets"
   },
   "registration": {
     "username": "User Name",
