[SnippetDetail] Faving scaff

--- a/tpe_paw/webapp/src/main/resources/i18n/messages_en.properties
+++ b/tpe_paw/webapp/src/main/resources/i18n/messages_en.properties
@@ -139,6 +139,7 @@ error.403.name=Forbidden
 error.404=This Content Isn't Available Right Now 
 error.404.name=Page Not Found
 error.404.user=The user with id {0} was not found
+error.404.username=The user with username {0} was not found
 error.404.language=The language with id {0} was not found
 error.404.tag=The tag with id {0} was not found
 error.404.snippet=The snippet with id {0} was not found
