--- a/tpe_paw/webapp/src/main/resources/i18n/messages_es.properties
+++ b/tpe_paw/webapp/src/main/resources/i18n/messages_es.properties
@@ -139,6 +139,7 @@ error.403.name=Prohibido
 error.404=Este contenido no se encuentra disponible por ahora 
 error.404.name=Página no encontrada
 error.404.user=El usuario con id {0} no se encontró
+error.404.username=No existe un usuario con nombre {0}
 error.404.language=El lenguaje con id {0} no se encontró
 error.404.tag=La etiqueta con id {0} no se encontró
 error.404.snippet=El snippet con id {0} no se encontró
