[Snippet Detail] Now user can report and unreport snippets

--- a/tpe_paw_front/src/locales/en.json
+++ b/tpe_paw_front/src/locales/en.json
@@ -64,6 +64,13 @@
       "following": {
         "title": "Following"
       }
+    },
+    "snippetDetail": {
+      "report": {
+        "whatIsWrong": "What is wrong with this snippet?",
+        "confirm": "Confirm",
+        "cancel": "Cancel"
+      }
     }
   },
   "search": {
