[Admin] Scaffolding for adding languages and tags

--- a/tpe_paw/webapp/src/main/resources/i18n/messages.properties
+++ b/tpe_paw/webapp/src/main/resources/i18n/messages.properties
@@ -155,6 +155,8 @@ error.500=We're Sorry! There was an error on our side
 error.500.name=Internal Server Error
 error.500.snippet.report.failure="Failure while reporting the snippet."
 error.500.io.image=Error parsing image
+error.500.tags.create=Error creating tag with name {0}
+error.500.languages.create=Error creating language with name {0}
 error.home=Why not look for something else or go back to the Home page?
 error.unknown.name=Unknown Error
 error.unknown=We are sorry, we do not know what went wrong
