--- a/tpe_paw/webapp/src/main/resources/i18n/messages_es.properties
+++ b/tpe_paw/webapp/src/main/resources/i18n/messages_es.properties
@@ -156,6 +156,8 @@ error.500=¡Perdón! Parece que hubo un error de nuestro lado
 error.500.name=Error Interno
 error.500.snippet.report.failure="Fallo al reportar el snippet."
 error.500.io.image=Error procesando la imagen
+error.500.tags.create=Error al crear etiqueta con el nombre {0}
+error.500.languages.create=Error al crear lenguaje con el nombre {0}
 error.home=¿Por qué no buscas otra cosa o vuelves al Inicio?
 error.unknown.name=Error Desconocido
 error.unknown=Perdón, no sabemos que ocurrió mal
