[General, UI] Friendlier navigation, fixed warnings

--- a/tpe_paw_front/src/locales/en.json
+++ b/tpe_paw_front/src/locales/en.json
@@ -95,7 +95,8 @@
       "asc": "Ascending",
       "desc": "Descending",
       "no": "No specific order"
-    }
+    },
+    "searchBarHint": "Search for {objectType} here"
   },
   "user": {
     "profile": {
