[SnippetCreate] Started styling

--- a/tpe_paw_front/src/locales/en.json
+++ b/tpe_paw_front/src/locales/en.json
@@ -55,6 +55,7 @@
       "title": "Title",
       "description": "Description",
       "code": "Code",
+      "codeHint": "Insert your code",
       "tags": "Tags",
       "language": "Language"
     },
