[Error] Added button to try again in case of error in all paginated views

--- a/tpe_paw_front/src/locales/en.json
+++ b/tpe_paw_front/src/locales/en.json
@@ -180,5 +180,13 @@
     "languageSelect": {
       "selectLanguage": "Select A Language"
     }
+  },
+  "error": {
+    "grid": {
+      "tags": "There's been an error loading these tags",
+      "languages": "There's been an error loading these languages",
+      "snippets": "There's been an error loading these snippets",
+      "tryAgain": "Try Again"
+    }
   }
 }
