[Validations] Displaying error 400 messages in front

--- a/tpe_paw_front/src/locales/en.json
+++ b/tpe_paw_front/src/locales/en.json
@@ -205,6 +205,13 @@
     },
     "goBackHome": "You Can Go Back Home!",
     "goHome": "Go Home",
+    "unknown": "Unknown Error",
+    "400": {
+      "name": "Bad Request",
+      "desc": "Your request has validation errors",
+      "singleError": "Error in field {fieldName}: {errorMessage}",
+      "multipleErrors": "Multiple errors in sent request"
+    },
     "404": {
       "name": "Content Not Found",
       "desc": "This Content Isn't Available Right Now"
