[Validations, SnippetCreate] Added such validations to front end

--- a/tpe_paw_front/src/locales/en.json
+++ b/tpe_paw_front/src/locales/en.json
@@ -197,7 +197,8 @@
       "selectTag": "Select A Tag"
     },
     "languageSelect": {
-      "selectLanguage": "Select A Language"
+      "selectLanguage": "Select A Language",
+      "notNull": "One language must be selected"
     }
   },
   "error": {
