--- a/tpe_paw_front/src/locales/en.json
+++ b/tpe_paw_front/src/locales/en.json
@@ -182,7 +182,8 @@
     "minLength": "Length must be at least {minLength}",
     "lengthBetween": "Length must be between {minLength} and {maxLength}",
     "usernamePattern": "Username can only contain numbers, letters, -, _, or .",
-    "notBlankWithSpaces": "This field cannot contain only spaces"
+    "notBlankWithSpaces": "This field cannot contain only spaces",
+    "codePattern": "Code must be 6 characters long and contain only numbers"
   },
   "components": {
     "tfDatePicker": {
