[Validations, User] Added frontend validations for user description

--- a/tpe_paw_front/src/locales/en.json
+++ b/tpe_paw_front/src/locales/en.json
@@ -106,6 +106,7 @@
   "user": {
     "profile": {
       "editProfile": "Edit Profile",
+      "editDescription": "Edit description",
       "cancel": "Cancel",
       "done": "Done",
       "verifyAccount": {
