[Explore] Separated searchpad as a different component to enable showing a dialog on low resolutions

--- a/tpe_paw_front/src/locales/en.json
+++ b/tpe_paw_front/src/locales/en.json
@@ -34,7 +34,8 @@
     "from": "From",
     "to": "To",
     "min": "Min",
-    "max": "Max"
+    "max": "Max",
+    "showFilters": "Show Filters"
   },
   "languages": {
     "title": "Languages",
