[Style] Created title style, fixed flag on snippet component, removed flagged option for non admins

--- a/tpe_paw_front/src/locales/en.json
+++ b/tpe_paw_front/src/locales/en.json
@@ -6,7 +6,7 @@
   },
   "explore": {
     "explore": "Explore",
-    "padTitle": "Explore Snippets",
+    "padTitle": "Filters",
     "order": {
       "title": "Order",
       "orderBy": "Order By",
