[Styling] Fixed dimensions for detail; other styling improvements

--- a/tpe_paw_front/src/locales/en.json
+++ b/tpe_paw_front/src/locales/en.json
@@ -53,7 +53,8 @@
   },
   "snippets": {
     "createSnippet": {
-      "createSnippet": "Create Snippet",
+      "createSnippet": "Create A Snippet",
+      "create": "Create",
       "title": "Title",
       "description": "Description",
       "code": "Code",
