[UserProfile] Enhanced UI for user icon and info part

--- a/tpe_paw_front/src/locales/en.json
+++ b/tpe_paw_front/src/locales/en.json
@@ -180,6 +180,7 @@
     "verifyAccount": "Verify Your Account",
     "recoveryEmailSent": "Email Sent!",
     "mailSentInfo": "You can now visit the link we sent you and change your password.",
+    "enterCode": "Enter the code you received on your email.",
     "successfulVerification": "Successfully verified account!"
   },
   "validations": {
